# Vault

./: Cargo.toml  README.md  cat.vault  s.save  t
src/: comments.txt  main.rs  test.txt.decrypted
src/database/: mod.rs  operations.rs  structures.rs
src/encryption_and_decryption/: argon.rs  mod.rs
src/ui/: enums.rs  home_screen.rs  input_actions.rs  menu_actions.rs  mod.rs  render.rs  structures.rs
src/utils/: mod.rs  terminal_interactions.rs
