[package]
name = "vault"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-clipboard = "0.2.1"
chacha20poly1305 = { version = "0.9.0", features = ["stream"] }
anyhow = "1.0"
rand = "0.8"
zeroize = "1.4"
rust-argon2 = "1.0"
rpassword = "6.0.1"
clap = { version = "3.1.18", features = ["derive"] }
chrono = {version ="0.4.19", features = ["serde"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui = "0.18.0"
crossterm = "0.23"
thiserror = "1.0"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
